# ispee

./: .gitignore  .mypy.ini  Dockerfile  Dockerfile-debug  Makefile  README.md  config-TEMPLATE.yml  config.yml  docker-compose.yml  probes.yml  pyproject.toml
backup-restore/: backup-metrics.sh  restore-metrics.sh
grafana/dashboards/: APoZJA77C.json  Frl1sDxRm.json  internet-performance.json  ip-address.json  latency.json  modem-info.json  modem.json  tXthvGsYc.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prom.yml  victoriametrics.yml
prober/: __main__.py  config.py  console.py  exception.py  payload.json  probe.py  prometheus.py  s33.py
prometheus/config/: prometheus.yml
scripts/: backup_dashboards.py
src/ispee/: __main__.py  async_util.py  config.py  exception.py  ip.py  jobs.py  ping.py  s33.py
victoriametrics/config/: prometheus.yml
