[tool.poetry]
name = "prober"
version = "0.1.0"
description = ""
authors = ["Tim Martin <tim@timmart.in>"]

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.13.1"
rich = "^11.2.0"
click = "^8.0.4"
PyYAML = "^6.0"
scapy = "^2.4.5"
attrs = "^21.4.0"
httpx = "^0.22.0"
yarl = "^1.7.2"
trio = "^0.22.0"
trio-util = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"
pylint = "^2.12.2"
isort = "^5.10.1"
types-PyYAML = "^6.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
